--- a/app.config
+++ b/app.config
@@ -1,8 +1,10 @@
 {
-    "database": {
-        "host": "127.0.0.1",
-        "user": "root",
-        "passwd": "",
-        "db": "dejavu"
-    }
+    "BD_HOST": "127.0.0.1",
+    "BD_USER": "root",
+    "BD_PASSWD": "toor",
+    "BD_ID": "ironrec",
+    "BD_PORT": 3311,
+    "DIR_AVISO": "audios/avisos/",
+    "DIR_HORA": "audios/horas/",
+    "DIR_AVISO_PROCESADOS": "baseconocimiento/"
 }
