Adding api parameters configuration

--- a/app.config
+++ b/app.config
@@ -6,5 +6,7 @@
     "BD_PORT": 3311,
     "DIR_AVISO": "audios/avisos/",
     "DIR_HORA": "audios/horas/",
-    "DIR_AVISO_PROCESADOS": "baseconocimiento/"
+    "DIR_AVISO_PROCESADOS": "baseconocimiento/",
+    "API_HOST":"127.0.0.1",
+    "API_PORT":5000
 }
