--- a/app.config
+++ b/app.config
@@ -5,8 +5,14 @@
     "BD_ID": "ironrec",
     "BD_PORT": 3311,
     "DIR_AVISO": "audios/avisos/",
+    "DIR_AVISO_PROCESADOS": "audios/avisos_procesados/",
     "DIR_HORA": "audios/horas/",
-    "DIR_AVISO_PROCESADOS": "baseconocimiento/",
+    "DIR_BASECONOCIMIENTO": "baseconocimiento/",
     "API_HOST":"127.0.0.1",
-    "API_PORT":5000
+    "API_PORT":5000,
+    "DEMONIO_TIEMPO_AVISOS": 1,
+    "DEMONIO_TIEMPO_HORAS": 1,
+    "DEMONIO_TIEMPO_XMLS": 1,
+    "DIR_HORA_PROCESADA": "audios/horas_procesadas/",
+    "DIR_HORA_HUELLA": "audios/horas_huellas/"
 }
