Actualizacion de la API.

--- a/app.config
+++ b/app.config
@@ -3,7 +3,7 @@
     "BD_USER": "root",
     "BD_PASSWD": "toor",
     "BD_ID": "ironrec",
-    "BD_PORT": 3311,
+    "BD_PORT": 3306,
     "DIR_AVISO": "audios/avisos/",
     "DIR_AVISO_PROCESADOS": "audios/avisos_procesados/",
     "DIR_HORA": "audios/horas/",
@@ -14,5 +14,7 @@
     "DEMONIO_TIEMPO_HORAS": 1,
     "DEMONIO_TIEMPO_XMLS": 1,
     "DIR_HORA_PROCESADA": "audios/horas_procesadas/",
-    "DIR_HORA_HUELLA": "audios/horas_huellas/"
+    "DIR_HORA_HUELLA": "audios/horas_huellas/",
+    "MAX_PROC" : 2,
+    "RESET_BD": 0
 }
